--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 *.class
 
 *.iml
-/target
-/.settings
-/.classpath
-/.project
-/.idea
+target/
+.settings/
+.classpath
+.project
+.idea
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
